2026R1/Mechanical-ACT-API-26-r1/api/ansys/mechanical/stubs/v251/Ansys/ACT/Automation/Mechanical/Results/LatticeDensity.md
# `LatticeDensity`

<a id="ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.Results.LatticeDensity"></a>

#### *class* Ansys.ACT.Automation.Mechanical.Results.LatticeDensity

Bases: [`object`](https://docs.python.org/3/library/functions.html#object)

Defines a LatticeDensity.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Methods

| Name | Description |
|----------------------------------------------------------------------|-----------------------------------------------------------------------------------|
| [`Activate`](#LatticeDensity.Activate)                               | Activate the current object.                                                      |
| [`AddComment`](#LatticeDensity.AddComment)                           | Creates a new child Comment.                                                      |
| [`AddFigure`](#LatticeDensity.AddFigure)                             | Creates a new child Figure.                                                       |
| [`AddImage`](#LatticeDensity.AddImage)                               | Creates a new child Image.                                                        |
| [`ClearGeneratedData`](#LatticeDensity.ClearGeneratedData)           | Clears the result.                                                                |
| [`CopyTo`](#LatticeDensity.CopyTo)                                   | Copies all visible properties from this object to another.                        |
| [`CreateParameter`](#LatticeDensity.CreateParameter)                 | Creates a new parameter for a Property.                                           |
| [`Delete`](#LatticeDensity.Delete)                                   | Run the Delete action.                                                            |
| [`Duplicate`](#LatticeDensity.Duplicate)                             | Creates a copy of the current DataModelObject.                                    |
| [`EvaluateAllResults`](#LatticeDensity.EvaluateAllResults)           | Run the EvaluateAllResults action.                                                |
| [`ExportAnimation`](#LatticeDensity.ExportAnimation)                 | Run the ExportAnimation action.                                                   |
| [`GetChildren`](#LatticeDensity.GetChildren)                         | Gets the list of children, filtered by type.                                      |
| [`GetParameter`](#LatticeDensity.GetParameter)                       | Gets the parameter corresponding to the given property.                           |
| [`GroupAllSimilarChildren`](#LatticeDensity.GroupAllSimilarChildren) | Run the GroupAllSimilarChildren action.                                           |
| [`GroupSimilarObjects`](#LatticeDensity.GroupSimilarObjects)         | Run the GroupSimilarObjects action.                                               |
| [`PropertyByAPIName`](#LatticeDensity.PropertyByAPIName)             | Get a property by its API name.                                                   |
| [`PropertyByName`](#LatticeDensity.PropertyByName)                   | Get a property by its unique name.                                                |
| [`RemoveParameter`](#LatticeDensity.RemoveParameter)                 | Removes the parameter from the parameter set corresponding to the given property. |
| [`RenameBasedOnDefinition`](#LatticeDensity.RenameBasedOnDefinition) | Run the RenameBasedOnDefinition action.                                           |

### Properties

| Name | Description |
|----------------------------------------------------------------------|---------------------------------------------------------------|
| [`CalculateTimeHistory`](#LatticeDensity.CalculateTimeHistory)       | Gets or sets the CalculateTimeHistory.                        |
| [`Children`](#LatticeDensity.Children)                               | Gets the list of children.                                    |
| [`Comments`](#LatticeDensity.Comments)                               | Gets the list of associated comments.                         |
| [`DataModelObjectCategory`](#LatticeDensity.DataModelObjectCategory) | Gets the current DataModelObject’s category.                  |
| [`ExclusionsParticipation`](#LatticeDensity.ExclusionsParticipation) | Gets or sets the ExclusionsParticipation.                     |
| [`Figures`](#LatticeDensity.Figures)                                 | Gets the list of associated figures.                          |
| [`FinalMass`](#LatticeDensity.FinalMass)                             | Gets the FinalMass.                                           |
| [`FinalVolume`](#LatticeDensity.FinalVolume)                         | Gets the FinalVolume.                                         |
| [`Images`](#LatticeDensity.Images)                                   | Gets the list of associated images.                           |
| [`InternalObject`](#LatticeDensity.InternalObject)                   | Gets the internal object. For advanced usage only.            |
| [`IterationNumber`](#LatticeDensity.IterationNumber)                 | Gets the IterationNumber.                                     |
| [`IterationStep`](#LatticeDensity.IterationStep)                     | Gets or sets the IterationStep.                               |
| [`Location`](#LatticeDensity.Location)                               | Gets or sets the Location.                                    |
| [`Maximum`](#LatticeDensity.Maximum)                                 | Gets the Maximum.                                             |
| [`Minimum`](#LatticeDensity.Minimum)                                 | Gets the Minimum.                                             |
| [`OriginalMass`](#LatticeDensity.OriginalMass)                       | Gets the OriginalMass.                                        |
| [`OriginalVolume`](#LatticeDensity.OriginalVolume)                   | Gets the OriginalVolume.                                      |
| [`PercentMassOfOriginal`](#LatticeDensity.PercentMassOfOriginal)     | Gets the PercentMassOfOriginal.                               |
| [`PercentVolumeOfOriginal`](#LatticeDensity.PercentVolumeOfOriginal) | Gets the PercentVolumeOfOriginal.                             |
| [`Properties`](#LatticeDensity.Properties)                           | Gets the list of properties for this object.                  |
| [`ScopingMethod`](#LatticeDensity.ScopingMethod)                     | Gets or sets the ScopingMethod.                               |
| [`Selection`](#LatticeDensity.Selection)                             | Gets or sets the Selection.                                   |
| [`ShowOptimizedRegion`](#LatticeDensity.ShowOptimizedRegion)         | Gets or sets the ShowOptimizedRegion.                         |
| [`Suppressed`](#LatticeDensity.Suppressed)                           | Gets or sets the Suppressed.                                  |
| [`VisibleProperties`](#LatticeDensity.VisibleProperties)             | Gets the list of properties that are visible for this object. |

<a id="property-detail"></a>

## Property detail

<a id="LatticeDensity.CalculateTimeHistory"></a>

### *property* LatticeDensity.CalculateTimeHistory *: [bool](https://docs.python.org/3/library/functions.html#bool) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets or sets the CalculateTimeHistory.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.Children"></a>

### *property* LatticeDensity.Children *: List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the list of children.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.Comments"></a>

### *property* LatticeDensity.Comments *: Iterable[[Ansys.ACT.Automation.Mechanical.Comment](./../Comment.md#ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.Comment)] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the list of associated comments.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.DataModelObjectCategory"></a>

### *property* LatticeDensity.DataModelObjectCategory *: [Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory](./../../../../Mechanical/DataModel/Enums/DataModelObjectCategory.md#ansys.mechanical.stubs.v251.Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the current DataModelObject’s category.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.ExclusionsParticipation"></a>

### *property* LatticeDensity.ExclusionsParticipation *: [bool](https://docs.python.org/3/library/functions.html#bool) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets or sets the ExclusionsParticipation.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.Figures"></a>

### *property* LatticeDensity.Figures *: Iterable[[Ansys.ACT.Automation.Mechanical.Figure](./../Figure.md#ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.Figure)] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the list of associated figures.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.FinalMass"></a>

### *property* LatticeDensity.FinalMass *: Ansys.Core.Units.Quantity | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the FinalMass.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.FinalVolume"></a>

### *property* LatticeDensity.FinalVolume *: Ansys.Core.Units.Quantity | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the FinalVolume.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.Images"></a>

### *property* LatticeDensity.Images *: Iterable[[Ansys.ACT.Automation.Mechanical.Image](./../Image.md#ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.Image)] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the list of associated images.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.InternalObject"></a>

### *property* LatticeDensity.InternalObject *: Ansys.Common.Interop.DSObjectsAuto.IDSResultAuto | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the internal object. For advanced usage only.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.IterationNumber"></a>

### *property* LatticeDensity.IterationNumber *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the IterationNumber.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.IterationStep"></a>

### *property* LatticeDensity.IterationStep *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets or sets the IterationStep.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.Location"></a>

### *property* LatticeDensity.Location *: Ansys.ACT.Interfaces.Common.ISelectionInfo | [None](https://docs.python.org/3/library/constants.html#None)*

Gets or sets the Location.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.Maximum"></a>

### *property* LatticeDensity.Maximum *: [float](https://docs.python.org/3/library/functions.html#float) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the Maximum.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.Minimum"></a>

### *property* LatticeDensity.Minimum *: [float](https://docs.python.org/3/library/functions.html#float) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the Minimum.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.OriginalMass"></a>

### *property* LatticeDensity.OriginalMass *: Ansys.Core.Units.Quantity | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the OriginalMass.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.OriginalVolume"></a>

### *property* LatticeDensity.OriginalVolume *: Ansys.Core.Units.Quantity | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the OriginalVolume.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.PercentMassOfOriginal"></a>

### *property* LatticeDensity.PercentMassOfOriginal *: [float](https://docs.python.org/3/library/functions.html#float) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the PercentMassOfOriginal.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.PercentVolumeOfOriginal"></a>

### *property* LatticeDensity.PercentVolumeOfOriginal *: [float](https://docs.python.org/3/library/functions.html#float) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the PercentVolumeOfOriginal.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.Properties"></a>

### *property* LatticeDensity.Properties *: [tuple](https://docs.python.org/3/library/stdtypes.html#tuple)[Ansys.ACT.Automation.Mechanical.Property] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the list of properties for this object.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.ScopingMethod"></a>

### *property* LatticeDensity.ScopingMethod *: [Ansys.Mechanical.DataModel.Enums.GeometryDefineByType](./../../../../Mechanical/DataModel/Enums/GeometryDefineByType.md#ansys.mechanical.stubs.v251.Ansys.Mechanical.DataModel.Enums.GeometryDefineByType) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets or sets the ScopingMethod.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.Selection"></a>

### *property* LatticeDensity.Selection *: [Ansys.ACT.Automation.Mechanical.OptimizationRegion](./../OptimizationRegion.md#ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.OptimizationRegion) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets or sets the Selection.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.ShowOptimizedRegion"></a>

### *property* LatticeDensity.ShowOptimizedRegion *: [Ansys.Mechanical.DataModel.Enums.TopologyOptimizationResultShowType](./../../../../Mechanical/DataModel/Enums/TopologyOptimizationResultShowType.md#ansys.mechanical.stubs.v251.Ansys.Mechanical.DataModel.Enums.TopologyOptimizationResultShowType) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets or sets the ShowOptimizedRegion.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.Suppressed"></a>

### *property* LatticeDensity.Suppressed *: [bool](https://docs.python.org/3/library/functions.html#bool) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets or sets the Suppressed.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.VisibleProperties"></a>

### *property* LatticeDensity.VisibleProperties *: [tuple](https://docs.python.org/3/library/stdtypes.html#tuple)[Ansys.ACT.Automation.Mechanical.Property] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the list of properties that are visible for this object.

<!-- !! processed by numpydoc !! -->

<a id="method-detail"></a>

## Method detail

<a id="LatticeDensity.Activate"></a>

### LatticeDensity.Activate()

Activate the current object.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.AddComment"></a>

### LatticeDensity.AddComment()

Creates a new child Comment.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.AddFigure"></a>

### LatticeDensity.AddFigure()

Creates a new child Figure.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.AddImage"></a>

### LatticeDensity.AddImage(filePath: [str](https://docs.python.org/3/library/stdtypes.html#str))

```text
Creates a new child Image.
If a filePath is provided, the image will be loaded from that file,
if not, the image will be a screen capture of the Geometry window.
```

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.ClearGeneratedData"></a>

### LatticeDensity.ClearGeneratedData()

Clears the result.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.CopyTo"></a>

### LatticeDensity.CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject)

Copies all visible properties from this object to another.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.CreateParameter"></a>

### LatticeDensity.CreateParameter(propName: [str](https://docs.python.org/3/library/stdtypes.html#str))

Creates a new parameter for a Property.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.Delete"></a>

### LatticeDensity.Delete()

Run the Delete action.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.Duplicate"></a>

### LatticeDensity.Duplicate()

Creates a copy of the current DataModelObject.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.EvaluateAllResults"></a>

### LatticeDensity.EvaluateAllResults()

Run the EvaluateAllResults action.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.ExportAnimation"></a>

### LatticeDensity.ExportAnimation(filePath: [str](https://docs.python.org/3/library/stdtypes.html#str), format: [Ansys.Mechanical.DataModel.Enums.GraphicsAnimationExportFormat](./../../../../Mechanical/DataModel/Enums/GraphicsAnimationExportFormat.md#ansys.mechanical.stubs.v251.Ansys.Mechanical.DataModel.Enums.GraphicsAnimationExportFormat), settings: [Ansys.Mechanical.Graphics.AnimationExportSettings](./../../../../Mechanical/Graphics/AnimationExportSettings.md#ansys.mechanical.stubs.v251.Ansys.Mechanical.Graphics.AnimationExportSettings))

Run the ExportAnimation action.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.GetChildren"></a>

### LatticeDensity.GetChildren(recurses: [bool](https://docs.python.org/3/library/functions.html#bool), children: List[ChildrenType])

Gets the list of children, filtered by type.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.GetParameter"></a>

### LatticeDensity.GetParameter(propName: [str](https://docs.python.org/3/library/stdtypes.html#str))

Gets the parameter corresponding to the given property.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.GroupAllSimilarChildren"></a>

### LatticeDensity.GroupAllSimilarChildren()

Run the GroupAllSimilarChildren action.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.GroupSimilarObjects"></a>

### LatticeDensity.GroupSimilarObjects()

Run the GroupSimilarObjects action.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.PropertyByAPIName"></a>

### LatticeDensity.PropertyByAPIName(name: [str](https://docs.python.org/3/library/stdtypes.html#str))

```text
Get a property by its API name.
If multiple properties have the same API Name, only the first property with that name will be returned.
```

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.PropertyByName"></a>

### LatticeDensity.PropertyByName(name: [str](https://docs.python.org/3/library/stdtypes.html#str))

Get a property by its unique name.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.RemoveParameter"></a>

### LatticeDensity.RemoveParameter(propName: [str](https://docs.python.org/3/library/stdtypes.html#str))

Removes the parameter from the parameter set corresponding to the given property.

<!-- !! processed by numpydoc !! -->

<a id="LatticeDensity.RenameBasedOnDefinition"></a>

### LatticeDensity.RenameBasedOnDefinition()

Run the RenameBasedOnDefinition action.

<!-- !! processed by numpydoc !! -->

